# MusicPlayer

./: CMakeLists.txt  main.cpp
include/: Callback.hpp  Config.hpp  FFT.hpp  Mode.hpp  Mode2D.hpp  Mode3D.hpp  MusicContainer.hpp  split.hpp
src/: Callback.cpp  FFT.cpp  Mode2D.cpp  Mode3D.cpp  MusicContainer.cpp  Split.cpp
